app/Resources/public/css/base.css
html, body {
  background: rgba(240,240,240,1);
}

body {
	font-family: sans-serif;
	color: rgba(10,10,10,1);
	font-size: 0.9em;
	line-height: 1.4;
}

a {
	color: rgba(20,120,180, 1);
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}

input[type=text], input[type=password], textarea {
	padding: 0.4em;
	width: 90%;
}

textarea {
	min-height: 8em;
}

.dangerous:hover {
  color: rgba(155,30,30,1);
}

.link_button {
  border: none;
  background: none;
  color: rgba(20,120,180, 1);
	text-decoration: none;
	cursor: pointer;
	padding: 0;
	margin: 0;
}

.link_button:hover {
	text-decoration: underline;
}

label {
	display: block;
}

.main_headline {
  font-size: 2em;
  font-weight: bold;
}

.record_properties dt {
  font-weight: bold;
}

.record_properties dd {
  margin-bottom: 1em;
}

.records_list th,
.records_list td {
  padding: 0.2em 1em 0.2em 0.3em;
}

.records_list th {
  font-weight: bold;
  font-size: 0.9em;
}

.records_list td {
  vertical-align: top;
}

.records_list thead {
  border-bottom: 1px solid rgba(190,190,190,1);
}

.records_list {
  border-bottom: 1px solid rgba(190,190,190,1);
}

.record_actions_row {
  margin: 1em 0;
}

.record_actions_row li {
  display: inline;
  padding: 0 1em;
  border-left: 1px solid rgba(200,200,200,1);
}

.record_actions_row li:first-child {
  border-left: none;
}

.record_actions_row form,
.record_actions_row div {
  display: inline;
}

.spaced_box {
  padding: 2em 0;
}

.form-row {
	padding: 0.6em;
	margin: 0.4em 0;
}

.form-row .form-row {
	padding: 0.6em 0;
	margin: 0.4em 0;
}


.form-row.errors {
	background: rgba(255, 50, 50, 0.1);
	color: rgba(80, 0, 0, 1);
}

.wrapper {
	width: 50em;
	margin: 0 auto;
}

#login-panel {
	float: right;
	padding: 1em 0;
}

#login-panel ul {
	margin: 0;
	padding: 0;
}

#login-panel li {
	list-style: none;
}

.content_box {
	clear: both;
	background: rgba(250,250,250,1);
	padding: 2em;

	box-shadow: 1px 1px 2px rgba(5,10,20, 0.1);

	margin: 2em 0;
}

